--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,8 @@
-API_KEY = "sk_c89c40ec5e5eebc30945f6f2ca90d18adb86b2ff"
+# Your GCS bucket
+BUCKET_NAME = "contact-scraper-bucket"
+
+# (Optional) If you still need your Scrapin API key in the same app
+# e.g. for merge_results or any other direct API call
+# API_KEY = "aa"
+
+
